tests/samples/negative/types/strraw_pointer_alias_return_local.ax
module strraw_pointer_alias_return_local;

unsafe fn bad() -> str {
    let bytes: [2]u8 = b"ok";
    let data: *const u8 = sliceptr(bytes[:]);
    return strraw(data, slicelen(bytes[:]));
}

fn main() -> i32 {
    return 0;
}
